# crypto-prediction

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  SERVER_README.md  docker-compose.yml  init.sql  install.sh  log.txt  pyproject.toml  requirements.txt  run_bot.sh  run_crypto.sh  run_stock.sh  start_server.py  test_db_integration.py  test_strategy_performance.py  trading-bot.service
app/: __init__.py  cbpro_client.py  config.py  log.txt  logger.py  ma_trader.py  main.py  server.py  strategies.py  test_main.py  trader_driver.py  util.py  visualization.py
app/api/: server.py
app/core/: __init__.py  config.py  main.py  main_defi.py  screte.ini.template  secret.ini.template
app/data/: defi_event_client.py  economic_indicators_client.py  fear_greed_client.py
app/db/: database.py  db_management.py
app/trading/: binance_client.py  cbpro_client.py  ma_trader.py  strat_trader.py  strategies.py  trader_driver.py  us_stock_client.py
app/utils/: email_util.py  util.py
app/visualization/: visualization.py
fetcher/: __init__.py
models/: BTC_HISTORY.csv  ETH_HISTORY.csv  ma_trader.py  main.py  trader_driver.py  util.py
notebooks/: [10-18-2020] MA Trader V2 Update.ipynb  __init__.py
notebooks/.ipynb_checkpoints/: [10-18-2020] MA Trader V2 Update-checkpoint.ipynb
tests/: test_fear_greed.py  test_poetry_setup.py  test_strategy_performance.py  test_trader_driver.py
tests/api/: TEST_README.md  __init__.py  test_api_endpoints.py  test_binance_credentials.py  test_buy_sell_execution.py  test_defi_event_client.py  test_economic_indicators_api.py  test_fred_config.py  test_m2_api_debug.py  test_m2_detailed_debug.py  test_us_stock_client.py
tests/fixtures/: BCH_HISTORY.csv  BTC_HISTORY.csv  ETH_HISTORY.csv  LTC_HISTORY.csv  buy_order_sample.json  sell_order_sample.json  wallet_sample.json
tests/integration/: test_clients_live_volume.py  test_db_integration.py  (+1 more)
(+28 files in other folders)
